Updated dependencies to try and debug some potential problems with running as Cloud Run Service.
To do:
- Exceptions for better error codes and exception handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=bgascBackend
+spring.cloud.function.web.path=/
+server.port=${PORT:8080}
+management.endpoints.web.exposure.include=health
